# bitquant

./: .gitignore  CLAUDE.md  README.md
bitquant_cpp/: CMakeLists.txt  README.md
bitquant_cpp/docs/: PAPER_TRADING_SETUP.md  test_coverage_implementation_plan.md
bitquant_cpp/examples/: demo_backtest_strategy.cpp  demo_bar_generator.cpp  demo_binance.cpp  demo_binance_spot.cpp  demo_database.cpp  demo_exchange.cpp  demo_grid_martin.cpp  demo_grid_martin_paper.cpp  demo_main_engine.cpp  demo_market_state_simulation.cpp  demo_multi_strategy.cpp  demo_paper_trading.cpp  demo_paper_trading_full.cpp  demo_strategy.cpp  test_websocket_real.cpp
bitquant_cpp/include/config/: config.hpp
bitquant_cpp/include/core/: types.hpp
bitquant_cpp/include/data/: array_manager.hpp  bar_generator.hpp  market_state_analyzer.hpp  price_smoother.hpp  ring_buffer.hpp
bitquant_cpp/include/database/: i_database.hpp  sqlite_database.hpp
bitquant_cpp/include/engine/: broker.hpp  event.hpp  main_engine.hpp  paper_broker.hpp  risk_manager.hpp  strategy.hpp  strategy_context.hpp  strategy_manager.hpp  strategy_optimizer.hpp  trading_engine.hpp
bitquant_cpp/include/exchange/: binance_api.hpp  binance_gateway.hpp  binance_mapping.hpp  binance_spot_gateway.hpp  binance_spot_rest_api.hpp  binance_spot_ws_api.hpp  binance_usdt_gateway.hpp  binance_usdt_rest_api.hpp  binance_usdt_ws_api.hpp  i_exchange.hpp  inverse_contract.hpp  offset_converter.hpp  okx_gateway.hpp  websocket_client.hpp
bitquant_cpp/include/statistics/: performance.hpp
bitquant_cpp/include/strategy/: builtin_strategies.hpp  grid_martin_strategy.hpp  validation_strategy.hpp
bitquant_cpp/include/utils/: datetime.hpp  logger.hpp  thread_pool.hpp
bitquant_cpp/scripts/: generate_coverage.sh  quick_coverage.sh  start_grid_martin_auto.sh
bitquant_cpp/src/config/: config.cpp
bitquant_cpp/src/core/: types.cpp
bitquant_cpp/src/data/: array_manager.cpp  bar_generator.cpp  market_state_analyzer.cpp  price_smoother.cpp  ring_buffer.cpp
bitquant_cpp/src/database/: sqlite_database.cpp
bitquant_cpp/src/engine/: broker.cpp  event.cpp  main_engine.cpp  paper_broker.cpp  risk_manager.cpp  strategy.cpp  strategy_context.cpp  strategy_manager.cpp  strategy_optimizer.cpp  trading_engine.cpp
bitquant_cpp/src/exchange/: binance_api.cpp  binance_gateway.cpp  binance_mapping.cpp  binance_spot_gateway.cpp  binance_spot_rest_api.cpp  binance_spot_ws_api.cpp  binance_usdt_gateway.cpp  binance_usdt_rest_api.cpp  binance_usdt_ws_api.cpp  exchange_factory.cpp  offset_converter.cpp  okx_gateway.cpp  websocket_client.cpp
bitquant_cpp/src/statistics/: performance.cpp
bitquant_cpp/src/strategy/: builtin_strategies.cpp  grid_martin_strategy.cpp  validation_strategy.cpp
bitquant_cpp/src/utils/: datetime.cpp  logger.cpp  thread_pool.cpp
bitquant_cpp/tests/integration/: test_branch_coverage.cpp  test_integration.cpp
bitquant_cpp/tests/unit/: test_array_manager.cpp  test_bar_generator.cpp  test_binance_api.cpp  test_binance_gateway.cpp  test_binance_mapping.cpp  test_binance_spot_gateway.cpp  test_binance_spot_rest_api.cpp  test_binance_spot_ws_api.cpp  test_binance_usdt_gateway.cpp  test_binance_usdt_rest_api.cpp  test_binance_usdt_ws_api.cpp  test_broker.cpp  test_config.cpp  test_datetime.cpp  test_exchange_factory.cpp  test_grid_martin.cpp  test_inverse_contract.cpp  test_logger.cpp  test_main_engine.cpp  test_market_state_analyzer.cpp  test_offset_converter.cpp  test_offset_converter_standalone.cpp  test_paper_broker.cpp  test_price_smoother.cpp  test_ring_buffer.cpp  test_sqlite_database.cpp  test_strategy.cpp  test_strategy_context.cpp  test_strategy_manager.cpp  test_thread_pool.cpp  test_types.cpp  test_validation_strategy.cpp  test_websocket_client.cpp
docs/superpowers/plans/: 2026-04-29-binance-spot-gateway.md  2026-05-13-grid-martin-strategy.md  2026-06-16-market-state-analyzer.md
docs/superpowers/specs/: 2026-04-29-binance-spot-cpp-design.md  2026-05-13-grid-martin-strategy-design.md  2026-06-16-market-state-analyzer-design.md
